<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Кинополка</string>

    <string name="tab_home">Главная</string>
    <string name="tab_search">Поиск</string>
    <string name="tab_library">Моя полка</string>

    <string name="action_back">Назад</string>
    <string name="action_retry">Повторить</string>
    <string name="action_undo">Отменить</string>

    <string name="home_search_hint">Поиск фильмов и сериалов</string>
    <string name="home_trending">В тренде за неделю</string>
    <string name="home_popular_movies">Популярные фильмы</string>
    <string name="home_popular_series">Популярные сериалы</string>
    <string name="home_empty">Здесь пока ничего нет. Попробуйте обновить позже.</string>
    <string name="shelf_see_all">Все</string>
    <string name="shelf_see_all_description">Показать все: %1$s</string>
    <string name="rating_short">★ %1$s</string>

    <string name="search_hint">Название фильма или сериала</string>
    <string name="search_clear">Очистить</string>
    <string name="search_min_length">Введите хотя бы два символа названия</string>
    <string name="search_empty">Ничего не найдено. Попробуйте другое название.</string>
    <string name="search_offline">Нет подключения к интернету. Поиск работает только онлайн.</string>

    <string name="genre_title_with_filter">%1$s: %2$s</string>
    <string name="genre_empty">В этом жанре пока ничего нет</string>
    <string name="sort_popular">Популярные</string>
    <string name="sort_rating">По рейтингу</string>
    <string name="sort_newest">Новые</string>

    <string name="offline_banner">Нет подключения. Показаны сохранённые данные.</string>

    <string name="filter_all">Все</string>
    <string name="filter_movies">Фильмы</string>
    <string name="filter_series">Сериалы</string>

    <string name="media_type_movie">Фильм</string>
    <string name="media_type_tv">Сериал</string>

    <string name="details_title">Карточка</string>
    <string name="details_ongoing">н. в.</string>
    <string name="details_runtime">%1$d ч %2$d мин</string>
    <string name="details_runtime_minutes">%1$d мин</string>
    <string name="details_status_want">Хочу посмотреть</string>
    <string name="details_status_watched">Смотрел</string>
    <string name="details_favorite_add">Добавить в избранное</string>
    <string name="details_favorite_remove">Убрать из избранного</string>
    <string name="details_overview_english">Описание на английском</string>
    <string name="details_overview_more">Ещё</string>
    <string name="details_overview_less">Свернуть</string>
    <string name="details_no_overview">Описания пока нет</string>
    <string name="details_cast">В ролях</string>
    <string name="details_related">Похожие</string>

    <string name="library_tab_want">Хочу</string>
    <string name="library_tab_watched">Смотрел</string>
    <string name="library_tab_favorites">Избранное</string>
    <string name="library_tab_count">%1$s (%2$d)</string>
    <string name="library_sort">Сортировка</string>
    <string name="library_sort_added">По дате добавления</string>
    <string name="library_sort_title">По названию</string>
    <string name="library_sort_rating">По рейтингу</string>
    <string name="library_remove">Удалить из списка «%1$s»</string>
    <string name="library_removed">«%1$s» удалено из списка «%2$s»</string>
    <string name="library_empty_want">Добавляйте сюда то, что хотите посмотреть</string>
    <string name="library_empty_watched">Здесь появятся просмотренные фильмы и сериалы</string>
    <string name="library_empty_favorites">Здесь появится избранное</string>
    <string name="library_find_something">Найти, что посмотреть</string>
    <string name="genre_title">Жанр</string>
    <string name="about_title">О приложении</string>
    <string name="about_version">Версия %1$s</string>
    <string name="about_description">Каталог фильмов и сериалов с личной медиатекой, которая работает без интернета.</string>
    <string name="about_data_source">Данные и изображения</string>
    <string name="about_tmdb_logo">Логотип TMDB</string>
    <string name="about_tmdb_link">themoviedb.org</string>
    <string name="about_tmdb_notice" translatable="false">This product uses the TMDB API but is not endorsed or certified by TMDB.</string>

    <string name="error_no_connection">Нет подключения к интернету</string>
    <string name="error_unauthorized">Нет доступа к TMDB. Проверьте TMDB_TOKEN в local.properties.</string>
    <string name="error_generic">Не удалось загрузить данные</string>

    <plurals name="details_seasons">
        <item quantity="one">%d сезон</item>
        <item quantity="few">%d сезона</item>
        <item quantity="many">%d сезонов</item>
        <item quantity="other">%d сезона</item>
    </plurals>
    <plurals name="details_votes">
        <item quantity="one">%s оценка</item>
        <item quantity="few">%s оценки</item>
        <item quantity="many">%s оценок</item>
        <item quantity="other">%s оценки</item>
    </plurals>
</resources>
